backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja-backend
  labels:
    app.kubernetes.io/name: vikunja
    app.kubernetes.io/service: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vikunja-backend
      app.kubernetes.io/service: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vikunja-backend
        app.kubernetes.io/service: backend
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: api
        image: backend
        imagePullPolicy: Always

        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        ports:
          - name: http
            containerPort: 3456
            protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 3456
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            memory: "128M"
            cpu: "100m"
          limits:
            memory: "1024M"
            cpu: "500m"
        volumeMounts:
        - name: data
          mountPath: /app/vikunja/files
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
