backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-backend
  labels:
    app.kubernetes.io/name: vikunja-backend
    app.kubernetes.io/service: backend
spec:
  ports:
    - name: http
      port: 3456
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: vikunja-backend
    app.kubernetes.io/service: backend
  sessionAffinity: None
  type: ClusterIP
