backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: vikunja-backend
    app.kubernetes.io/service: backend
  name: vikunja-backend
spec:
  rules:
  - host: VIKUNJA_API_HOST
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: vikunja-backend
            port:
              number: 3456
